src/test/deca/context/valid/fields/selection_on_var_object.deca
// Description :
//    Sélection de champ sur une variable objet.
//
// Resultats :
//    OK

class A {
    public int x;
}

{
    A a = new A();
    a.x = 8;
    println(a.x);
}

