src/test/deca/context/invalid/fields/selection_on_int.deca
// Description :
//    Sélection de champ sur une expression de type int.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 10 : Sélection impossible sur un type non-objet

{
    int x = 3;
    int y = x.z;
}

